--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <td>Driver at Pedal Tours Dublin</td>
   </tr>
 </tabl>
-<a href="hobbies.html">My Hobbies</a>
+<a href="Hobbies.html">My Hobbies</a>
 <a href="contact-me.html">Contact me</a>
 </body>
 </html>
